**  denotes quite substantial/important changes
*** denotes really big changes 

1.8-1

* fix of 1.8-0 bug - gam prior weights mishandled in computation of cov matrix.
  Thanks Fabian Scheipl.
		
1.8-0

*** Cox Proportional Hazard family 'cox.ph' added as example of general
  penalized likelihood families now useable with 'gam'.

*** 'ocat', 'tw', 'nb', 'betar', 'ziP' and 'scat' families added for 
  ordered categorical data, Tweedie with estimation of 'p', negative binomial 
  with (fast) estimation of 'theta', beta regression for proportions, simple
  zero inflated Poisson regression and heavy tailed regression with scaled t 
  distribution. These are all examples of 'extended families' now useable 
  with 'gam'.

*** 'gaulss' and 'ziplss' families, implementing models with multiple linear 
  predictors. For gaulss there is a linear predictor for the Gaussian mean
  and another for the standard deviation. For ziplss there is a linear
  predictor controlling `presence' and another controlling 
  the Poisson parameter, given presence. 

*** 'mvn' family for multivariate normal additive models.

** AIC computation changed for bam and gam models estimated by REML/ML
   to account for smoothing parameter uncertainty in degrees of freedom
   term.

* With REML/ML smoothness selection in gam/bam an extra covariance matrix 'Vc'
  is now computed which allows for smoothing parameter uncertainty. See
  the 'unconditional' arguments to 'predict.gam' and 'plot.gam' to use this. 

* 'gam.vcomp' bug fix. Computed intervals for families with fixed scale 
   parameter were too wide. 

* gam now defaults to the Pearson estimator of the scale parameter to avoid
  poor scale estimates in the quasipoisson case with low counts (and possibly
  elsewhere). Gaussian, Poisson and binomial inference invariant to change. 
  Thanks to Greg Dropkin, for reporting the issue.

* Polish translation added thanks to Lukasz Daniel.
