@@ -1,5 +1,5 @@
 Package: mgcv
-Version: 1.8-0
+Version: 1.8-1
 Author: Simon Wood <simon.wood@r-project.org>
 Maintainer: Simon Wood <simon.wood@r-project.org>
 Title: Mixed GAM Computation Vehicle with GCV/AIC/REML smoothness estimation
